# honest-framework

./: .gitignore  INSTRUMENT_CONE_SYNTHESIS.md  LICENSE  MUTATION-ADEQUACY-REMEDIATION-PLAN.md  PLAN-FEATURES.md  PLAN-GENX-SUBSUMPTION.md  PLAN-STATIC-REFERENCE-CHECK.md  README.md  SPEC-CONFORMANCE-AUDIT.md  SPEC-UPDATE-PLAN.md  bootstrap.sh  integration-test-challenge.md
.githooks/: commit-msg  pre-commit
python/: .gitignore  CONTRIBUTING.md  GLOSSARY.md  README.md  app.py  coverage-all.sh  feature-gate.sh  hd-check.sh  honest_test.py  honest_type.py  lint-affected.sh  lint-all.sh  mutate-affected.sh  mutate-all.sh  mutate.py  proof_run.py  pyproject.toml  test-affected.sh  test-all.sh  test_honest_type.py  value-check.py
python/honest-alerts/: honest-alerts.hd  pyproject.toml
python/honest-alerts/conformance/: laws_ha.py  mutants_setaside.json  run_conformance.py  suite.json
python/honest-alerts/features/: honest-alerts.feature
python/honest-alerts/src/honest_alerts/: __init__.py  actors.py  config.py  core.py  dispatch.py  events.py  lifecycle.py  mailbox.py  message.py  routing.py  supervisor.py  surfaces.py
python/honest-alerts/tests/: test_core.py
python/honest-auth/: honest-auth.hd  pyproject.toml
python/honest-auth/conformance/: laws_ha.py  mutants_setaside.json  run_conformance.py  suite.json
python/honest-auth/examples/: README.md  auth0.py  clerk.py  firebase.py  supabase.py
python/honest-auth/src/honest_auth/: __init__.py  authenticate.py  dev_provider.py  honesty.py  registry.py  types.py
python/honest-check/: COMPLIANCE-AUDIT.md  PRINCIPLES-COVERAGE.md  README.md  honest-check.hd  pyproject.toml
python/honest-check/conformance/: laws_hc.py  laws_hc_rules.py  mutants_setaside.json  run_conformance.py  suite.json
python/honest-check/features/: honest-check.feature
python/honest-check/src/honest_check/: __init__.py  adoption.py  auth_rules.py  binding_rules.py  boundary.py  cli.py  config.py  construction_rules.py  declgraph.py  diagnostics.py  formats.py  io_rules.py  js_rules.py  link_rules.py  lsp.py  parse.py  principle_rules.py  role_rules.py  rules.py  sm_rules.py  startup.py  suppression.py  templates.py  watchlists.py
python/honest-check/tests/: test_config_output.py  test_rules.py  test_watchlists.py
python/honest-components/: pyproject.toml
python/honest-components/tests/: test_core.py  test_runtime.py
python/honest-design/: honest-design.hd  pyproject.toml
python/honest-design/conformance/: laws_hd.py  mutants_setaside.json  run_conformance.py  suite.json
python/honest-design/features/: honest-design.feature
python/honest-dom/: pyproject.toml
python/honest-dom/tests/: test_core.py
python/honest-errors/: honest-errors.hd  pyproject.toml
python/honest-errors/conformance/: laws_he.py  mutants_setaside.json  run_conformance.py  suite.json
python/honest-errors/tests/: test_policy.py  test_rate_limit.py
python/honest-features/: honest-features.hd  pyproject.toml
python/honest-features/conformance/: laws_hf.py  run_conformance.py  suite.json
python/honest-features/tests/: test_core.py
python/honest-gherkin/: honest-gherkin.hd  pyproject.toml
python/honest-gherkin/conformance/: _sample.feature  _sample_steps.py  laws_hg.py  mutants_setaside.json  run_conformance.py  suite.json
python/honest-gherkin/features/: smoke.feature  smoke_steps.py
python/honest-gherkin/tests/: test_parser.py  test_registry.py  test_runner.py
python/honest-observe/: honest-observe.hd  pyproject.toml
python/honest-observe/conformance/: laws_ho.py  mutants_setaside.json  run_conformance.py  suite.json
python/honest-observe/tests/: test_events.py  test_log.py
python/honest-page/: pyproject.toml
python/honest-page/conformance/: laws_hp.py  run_conformance.py
python/honest-page/tests/: test_core.py
python/honest-parse/: honest-parse.hd  pyproject.toml
python/honest-parse/conformance/: laws_parse.py  mutants_setaside.json  run_conformance.py  suite.json
python/honest-parse/features/: honest-parse.feature
python/honest-persist/: honest-persist.hd  pyproject.toml
python/honest-persist/conformance/: laws_hp.py  mutants_setaside.json  postgres_fixture.py  run_conformance.py  suite.json  turso_fixture.py
python/honest-persist/examples/: README.md  _app.py  django_todo.py  pydantic_todo.py
python/honest-persist/features/: honest-persist.feature
python/honest-persist/tests/: test_mutation.py  test_query.py  test_schema.py
python/honest-rca/: honest-rca.hd  pyproject.toml
python/honest-rca/conformance/: laws_hr.py  run_conformance.py  suite.json
python/honest-state/: honest-state.hd  pyproject.toml
python/honest-state/conformance/: laws_hs.py  run_conformance.py  suite.json
python/honest-state/tests/: test_machine.py
python/honest-test/: FEATURE_REQUEST_silent_default_lint.md  HANDOFF-browser-test-enforcement.md  README.md  SPEC-M2.md  SPEC-M3-browser.md  honest-test.hd  pyproject.toml
python/honest-test/.claude/: settings.local.json
python/honest-test/conformance/: app_buggy.py  app_clean.py  laws_htest.py  mutants_setaside.json  run_conformance.py  suite.json
python/honest-test/features/: honest-test.feature
python/honest-test/tests/: conftest.py  test_generate.py  test_honesty.py  test_runner.py  test_suites.py
python/honest-type/: honest-type.hd  pyproject.toml
python/honest-type/conformance/: laws_ht.py  mutants_setaside.json  run_conformance.py  suite.json
python/honest-type/tests/: test_binding.py  test_chain.py  test_chain_result.py  test_classify.py  test_classify_core.py  test_classify_edge_rejection.py  test_extract.py  test_vocabulary.py  test_vocabulary_reserved.py
python/static/: theme.css
python/templates/: base.html  page.html  search_results.html
python/tree-sitter-honest-hd/: README.md  grammar.js  pyproject.toml  setup.py
python/tree-sitter-honest-hd/src/: grammar.json  node-types.json  parser.c
python/tree-sitter-honest-jinja/: .gitignore  README.md  grammar.js  pyproject.toml  setup.py
python/tree-sitter-honest-jinja/src/: grammar.json  node-types.json  parser.c
(+261 files in other folders)
