[project]
name = "honest-workspace"
version = "0"
description = "uv workspace root for the Honest Framework Python reference implementation."
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["honest-*"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

# The dogfooding gate (coverage-all.sh). precision=2 makes --fail-under=100 exact: a single
# unhit line out of thousands reads as 99.9x < 100 and blocks, rather than rounding up to a
# false pass. No exclude_lines: the gate covers even the CLI __main__ shim by running it as a
# module, so every source line is genuinely exercised.
[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true

# The Pydantic schema loader (section 2) is an optional, Python-specific adapter — not part of the
# pure core. Pydantic lives in the dev group so the loader's conformance runs under the gate; an
# adopter opts in via the honest-persist[pydantic] extra. The pure core never imports it.
[dependency-groups]
dev = ["pydantic>=2"]
