[project]
name = "honest-workspace"
version = "0"
description = "uv workspace root for the Honest Framework Python reference implementation."
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["honest-*", "tree-sitter-honest-jinja", "tree-sitter-honest-hd"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

# The dogfooding gate (coverage-all.sh). precision=2 makes --fail-under=100 exact: a single
# unhit line out of thousands reads as 99.9x < 100 and blocks, rather than rounding up to a
# false pass. No exclude_lines: the gate covers even the CLI __main__ shim by running it as a
# module, so every source line is genuinely exercised.
[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true

# The Pydantic and Django schema loaders (section 2) are optional, Python-specific adapters — not part
# of the pure core. They live in the dev group so the loaders' conformance runs under the gate; an
# adopter opts in via the honest-persist[pydantic] or [django] extra. The pure core never imports them.
#
# FastAPI and Jinja2 are the honest-page reference server's stack (app.py, templates/). The framework
# implementation is opinionated: this is the stack the reference is written in, so the reference runs
# rather than only parsing. The pure modules never import them.
[dependency-groups]
dev = ["pydantic>=2", "django>=4", "psycopg[binary]>=3", "pyturso>=0.1", "fastapi>=0.110", "jinja2>=3"]
