[project]
name = "honest-alerts"
version = "0.1.0"
description = "Actor-model message passing + supervisor + mailbox projection."
authors = [{ name = "Adam Zachary Wasserman" }]
license = { text = "MIT" }
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_alerts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
