[project]
name = "honest-alerts"
version = "0.1.0"
description = "Actor-model message passing: messages between actors, mailboxes as projections over the event log."
requires-python = ">=3.11"
dependencies = ["honest-type"]

[tool.uv.sources]
honest-type = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_alerts"]

[tool.honest-check]
conformance = "python"
conformance-suite-version = "0"
