[project]
name = "honest-auth"
version = "0.1.0"
description = "The authentication interface: the AuthProvider contract, a value registry, and the boundary dispatch. Identity is validated at the boundary and passed inward as data."
requires-python = ">=3.11"
dependencies = ["honest-type"]

[tool.uv.sources]
honest-type = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_auth"]

[tool.honest-check]
conformance = "python"
conformance-suite-version = "0"
