[project]
name = "honest-check"
version = "0.1.0"
description = "Static linter for Honest Code. Structural + principle rules."
authors = [{ name = "Adam Zachary Wasserman" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
]

[project.scripts]
honest-check = "honest_check.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_check"]

[tool.pytest.ini_options]
testpaths = ["tests"]
