[project]
name = "honest-check"
version = "0.1.0"
description = "Static linter enforcing Honest Code principles — the pre-auto-generation gate of the Honest Framework."
requires-python = ">=3.11"
dependencies = ["honest-parse"]

[tool.uv.sources]
honest-parse = { workspace = true }

[project.scripts]
honest-check = "honest_check.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_check"]

[tool.honest-check]
conformance = "python"
conformance-suite-version = "1.0"
