[project]
name = "honest-design"
version = "0.1.0"
description = "The .hd architecture-declaration read path: source -> IR. Depends only on honest-parse; emits faults as data in the shared Result shape."
requires-python = ">=3.11"
dependencies = ["honest-parse"]

[tool.uv.sources]
honest-parse = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_design"]

[tool.honest-check]
conformance = "python"
conformance-suite-version = "0"
