[project]
name = "honest-dom"
version = "0.1.0"
description = "honest-DOM server-side primitives. Client JS ships separately."
authors = [{ name = "Adam Zachary Wasserman" }]
license = { text = "MIT" }
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_dom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
