[project]
name = "honest-errors"
version = "0.1.0"
description = "The error-policy leaf: one canonical report, behavior as a pure function of environment, a pure throttle. No I/O."
requires-python = ">=3.11"
dependencies = ["honest-type"]

[tool.uv.sources]
honest-type = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_errors"]

[tool.honest-check]
conformance = "python"
conformance-suite-version = "0"
