[project]
name = "honest-features"
version = "0.1.0"
description = "The feature-flag subsystem: a static flag vocabulary, flag state threaded as a value, and an HMAC-signed toggle. Pure functions; the route is the integration boundary."
requires-python = ">=3.11"
dependencies = ["honest-type"]

[tool.uv.sources]
honest-type = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_features"]

[tool.honest-check]
conformance = "python"
conformance-suite-version = "0"
