[project]
name = "honest-gherkin"
version = "0.1.0"
description = "Gherkin-subset parser + step registry + scenario runner, written in honest-code style. Narrative test harness for the Honest Framework."
authors = [{ name = "Adam Zachary Wasserman" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = []

[project.scripts]
honest-gherkin = "honest_gherkin.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_gherkin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
