[project]
name = "honest-gherkin"
version = "0.1.0"
description = "The BDD execution engine: parse a feature, match steps against a registry, fold and run, report — all as data."
requires-python = ">=3.11"
dependencies = ["honest-type"]

[project.scripts]
honest-gherkin = "honest_gherkin.cli:main"

[tool.uv.sources]
honest-type = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_gherkin"]

[tool.honest-check]
conformance = "python"
conformance-suite-version = "0"
