[project]
name = "honest-page"
version = "0.1.0"
description = "Server-side page surfaces + SSE wiring + context."
authors = [{ name = "Adam Zachary Wasserman" }]
license = { text = "MIT" }
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_page"]

[tool.pytest.ini_options]
testpaths = ["tests"]
