[project]
name = "honest-page"
version = "0.1.0"
description = "The honest-page reference: the host-page structural contract, its templates, tokens, and route-map server."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.honest-check]
conformance = "python"
conformance-suite-version = "0"
