[project]
name = "honest-parse"
version = "0.1.0"
description = "The shared tree-sitter parsing boundary of the Honest Framework: the single place source is parsed."
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-php>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-elixir>=0.3",
    "tree-sitter-html>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_parse"]

[tool.honest-check]
conformance = "python"
conformance-suite-version = "0"
