[project]
name = "honest-persist"
version = "0.1.0"
description = "Schema-first, pure-function persistence: schema as data, migrations as diff, queries as data."
requires-python = ">=3.11"
dependencies = ["honest-type"]

# The Pydantic schema loader (section 2) is an optional, Python-specific adapter. The pure core
# never imports Pydantic; an adopter who wants the loader installs honest-persist[pydantic].
[project.optional-dependencies]
pydantic = ["pydantic>=2"]

[tool.uv.sources]
honest-type = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_persist"]

[tool.honest-check]
conformance = "python"
conformance-suite-version = "0"
