[project]
name = "honest-persist"
version = "0.1.0"
description = "Schema-first, pure-function persistence: schema as data, migrations as diff, queries as data."
requires-python = ">=3.11"
dependencies = ["honest-type"]

# The schema loaders (section 2) are optional, Python-specific adapters. The pure core never imports
# Pydantic or Django; an adopter who wants a loader installs honest-persist[pydantic] or [django].
[project.optional-dependencies]
pydantic = ["pydantic>=2"]
django = ["django>=4"]

[tool.uv.sources]
honest-type = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_persist"]

[tool.honest-check]
conformance = "python"
conformance-suite-version = "0"
