[project]
name = "honest-rca"
version = "0.1.0"
description = "The apophatic root-cause solver: a bounded evidence set, a versioned method, deterministic causal edges, a fixpoint traversal, and an attestation of the negative. No I/O."
requires-python = ">=3.11"
dependencies = ["honest-type"]

[tool.uv.sources]
honest-type = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_rca"]

[tool.honest-check]
conformance = "python"
conformance-suite-version = "0"
