[project]
name = "honest-state"
version = "0.1.0"
description = "The single-mutator law and the taxonomy of state kinds, as data. No primitives — the mechanics live in honest-DOM (user state) and honest-type (state machines); honest-state states the law and names each kind's mutator."
requires-python = ">=3.11"
dependencies = ["honest-type"]

[tool.uv.sources]
honest-type = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_state"]

[tool.honest-check]
conformance = "python"
conformance-suite-version = "0"
