[project]
name = "honest-test"
version = "0.1.0"
description = "Exhaustive-verification harness for the Honest Framework. Bounded vocabularies → Cartesian-product test spaces."
authors = [{ name = "Adam Zachary Wasserman" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
browser = ["pytest-playwright>=0.5"]

[project.entry-points."pytest11"]
honest_test = "honest_test.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_test"]

[tool.pytest.ini_options]
testpaths = ["tests"]
