[project]
name = "honest-type"
version = "0.1.0"
description = "Core type system for the Honest Framework. Recognizers, vocabularies, bindings, chains. Pure function tables as the type system."
authors = [{ name = "Adam Zachary Wasserman" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = []

[project.scripts]
honest-type = "honest_type.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "honest-gherkin",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_type"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
