[project]
name = "honest-type"
version = "0.1.0"
description = "The pure-function-table type system of the Honest Framework: recognizers, vocabularies, classify()."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honest_type"]

[tool.honest-check]
conformance = "python"
conformance-suite-version = "0"
