[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-honest-hd"
version = "0.1.0"
description = "Honest Framework .hd architecture-declaration grammar for tree-sitter — the parse boundary honest-design's reader folds into the IR."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
