[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-honest-jinja"
version = "0.1.0"
description = "Honest Framework Jinja template grammar for tree-sitter — surfaces {% include %}/{% extends %} targets so honest-check can resolve them (HC-REF002)."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
